# Projekat-iz-racunarske-grafike

./: CMakeLists.txt  README  README.md  main.cpp  stb_image.cpp
include/: Mesh.h  Model.h  Shader.h
resources/shader/: bandere.fs  kutije.fs  model.fs  podloga.fs  podloga.vs  svetslost.fs  trava.fs  vertex1.vs  vertex2.vs  vertex4.vs  vertex5.vs
